[package]
name = "tldrtool"
version = "1.0.1"
description = "Automate contributing to tldr"
homepage = "https://github.com/acuteenvy/tldrtool"
repository = "https://github.com/acuteenvy/tldrtool"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive", "cargo"] }
dirs = "5.0.1"
is-terminal = "0.4.7"
once_cell = "1.18.0"
yansi = "0.5.1"

[[bin]]
name = "tlt"
path = "src/main.rs"

[profile.release]
lto = true
strip = true
codegen-units = 1
panic = "abort"
